# anacondaplus

./: .gitignore  Dockerfile  build.sh  jupyterlab.sh  requiremenets.txt
anaconda/: Dockerfile  README.md  build.sh  jupyterlab.sh
dask-sql/: Dockerfile  README.md  build.sh  env.sh  pyproject.toml
dask-sql-docker/: init.sh  pyproject.toml  requirements-app.txt  requirements-dev.txt  update.sh
dask-sql-docker-conda/: build.sh  requirements-app.txt  requirements-dev.txt
dask-sql-docker-conda/docker/: Dockerfile  docker-compose.yml
dask-sql-docker/docker/: Dockerfile  docker-compose.yml
dask-sql-docker/tests/: test_dask_sql_docker.py
dask-sql-pipenv/: .dockerignore  Dockerfile  Pipfile  README.md  build.sh  env.sh  main.py  run.sh
dask-sql-pipenv/apackage/: __init__.py  amod.py
dask-sql-pipenv/apackage/subpackage/: __init__.py  module.py
dask-sql-pipenv/tests/: test_mod.py
dask-sql/apackage/: __init__.py  amod.py  amodclass.py
dask-sql/apackage/subpackage/: __init__.py  submoduleclass.py
dask-sql/tests/: test_mod.py
