[tool.poetry]
name = "dask-sql-docker"
version = "0.1.0"
description = ""
authors = ["Peter Lappo <peter.lappo@smr.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
PyYAML = "^6.0"
numpy = "^1.21.4"
pandas = "^1.3.4"
dask = {extras = ["complete"], version = "^2021.11.0"}
dask-sql = "^0.4.0"
requests = "^2.26.0"
pyodbc = "^4.0.32"
jupyterlab = "^3.2.2"
dask-labextension = "^5.1.0"
panel = "^0.12.4"
PyHive = "^0.6.4"
plotly = "^5.3.1"
fastapi = "^0.70.0"
gunicorn = "^20.1.0"
uvicorn = "^0.15.0"
fastparquet = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests-mock = "^1.9.3"
pytest-bdd = "^5.0.0"
pytest-selenium = "^2.0.1"
PyHamcrest = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
