[tool.poetry]
name = "smr-dask-sql"
version = "0.1.0"
description = ""
authors = ["Peter Lappo <peter.lappo@smr.co.uk>"]
packages = [
    { include = "apackage" },
]

[tool.poetry.scripts]
my-script = "apackage:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pymongo = "^3.11.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
testpaths = [
    "tests",
]